Added error messaging and fixed some small bugs

--- a/TODO
+++ b/TODO
@@ -1,1 +1,6 @@
-finish working on course aliasing, removing aliases, adding, error messages, confirmation messages, etc
+finish working on course aliasing,
+removing aliases,
+adding,
+error messages,
+confirmation messages,
+etc
