--- a/TODO
+++ b/TODO
@@ -1,11 +1,15 @@
-finish working on course aliasing,
-removing aliases,
-adding,
-error messages,
-confirmation messages,
-etc
-Add a remind me feature
+COMPLETED
+==============
+All course functions should be working
+All onhandling functionality should be working for channel and user logging
+All watch functionality should be working except requesting channel log files
 
 
-7/21 UPDATE INSERT/REMOVE FUNCTIONS
-INSERT REMOVES SHOULD UPDATE THE BOT VARIABLE CACHES
+UNFINISHED
+==============
+Comprehensive confirmation messages
+Comprehensive error messages
+Logging
+Remind feature
+Finishing tags
+Adding websoc to courseinfo
